# cookiecutter-kubernetes-deployment

./: .cz.toml  .gitignore  CHANGELOG.md  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: main.yml  pytest.yml
hooks/: post_gen_project.py
tests/: test_cookiecutter.py
{{cookiecutter.name}}/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  upstream.sh
{{cookiecutter.name}}/base/: kustomization.yaml
{{cookiecutter.name}}/licenses/: LICENSE_GPL  LICENSE_Proprietary
{{cookiecutter.name}}/overlays/development/: kustomization.yaml  secret-generator.yaml
{{cookiecutter.name}}/overlays/production/: secret-generator.yaml
{{cookiecutter.name}}/upstream/: Chart.yaml  values.yaml
