[tool.poetry]
name = "cookiecutter-flottille"
version = "0.1.0"
description = "**cookiecutter-flottille** is a template designed to help you quickly set up new machine learning projects using the **Flottille** library."
authors = ["Chris <goabonga@pm.me>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
cookiecutter = "^2.6.0"
pytest-cookies = "^0.7.0"
watchdog = "^5.0.3"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
