[tool.poetry]
name = "cookiecutter-kubernetes-deployment"
version = "0.2.2"
description = "📦 cookiecutter-kubernetes-deployment is a template generator for deploying applications using Helm and Kustomize on Kubernetes."
authors = ["Chris <goabonga@pm.me>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
cookiecutter = "^2.6.0"
pytest-cookies = "^0.7.0"
watchdog = "^5.0.3"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
